wacc/test/golden/syntaxErr.while.whileNodo
# while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false
    skip
  done
end


In test/wacc_examples/invalid/syntaxErr/while/whileNodo.wacc (line 13, column 5):
  unexpected "sk"
  expected arithmetic operator, comparison operator, do, end of false, or logical operator
  >  while false
  >    skip
       ^^
  >  done